--- a/.env.dev
+++ b/.env.dev
@@ -3,3 +3,4 @@
 APP_SECRET=226e06c55b4014de3d796e30c4a5e390
 ###< symfony/framework-bundle ###
 DATABASE_URL=mysql://kevin:aze@127.0.0.1:3306/sym_api?serverVersion=10.4.28-MariaDB&charset=utf8mb4
+JWT_PASSPHRASE="fake sentence"
